--- a/src/scss/_baseStyles.scss
+++ b/src/scss/_baseStyles.scss
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-color: $background__color--primary;
+  height: 100vh;
+}
+
+canvas {
+  display: block;
 }
